Add desktop version for home and about pages

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <title>About</title>
   </head>
   <body>
     <div class="topnavbar">
@@ -39,17 +39,100 @@
         </ul>
       </div>
     </div>
-    <section class="header">
-      <p class="hello">"Hello! Sharing world"</p>
+    <section class="header-about">
+      <p class="hello-about">"Hello! Sharing world"</p>
       <h1>ISTANBUL SUMMER FESTIVAL 2022</h1>
-      <p class="abouttext">
-        A joyful celebration believeing in the value of openness and sharing,
-        creating a positive change with people from over 80 vountries is taking
-        place in Octobre, in Korea.
+      <p class="abouttext-about">
+        The Global Summit brings together the community of experts, academics,
+        abd activist who comprise the Creative Commons affiliate network in a
+        different country every two. This year, we hope to ecpand our invitation
+        list including organizations and individuals who want to work with us on
+        shared projects that advance the cause of the Commons, free culture and
+        open knowledge. Sp if you're active and engaged in the worlds of open
+        content and knowledge - free software advocates, Wikipedians, Open
+        Knowledge, galleries, libraries, museums, archives, governments and
+        foundations, lawyers, and activists - we hope you'll consider joining us
+        this year to build a stronger, more vibrant commons together.
       </p>
-      <p class="date">2022.10.15(THU) - 16(FRI)</p>
-      <p class="place">@ National Museum of Korea, Art Center Nabi and more</p>
+      <p class="contactus">
+        Please contact us per Email for any further questions about CC Global
+        Summit 2022!
+      </p>
+      <a class="email">ccsummit2015@cckorea.org</a>
     </section>
+    <section class="logo">
+      <h2>
+        Creative Commons <br />
+        Global Summit 2022 Logo
+      </h2>
+      <p>
+        The logo of Summer Festival 2022 was decided through the logo
+        competition from 8. June to 7. July
+      </p>
+      <p class="extralogo">
+        After online public voting and Selection Commitee;s judging process, the
+        logo from Naresh Agrawal won the prize. After consultation with Mr.
+        Agrawal we optimized the prize-winning-loogo for this year's summit as
+        following:
+      </p>
+      <div><img src="/assets/images/logo.png" /></div>
+    </section>
+    <section class="past-summits">
+      <h2>See the past CC Summer Festivals</h2>
+      <p>
+        Take a look at the last two Summer Festivals which took place in Buenos
+        Aires and in Warsaw.
+      </p>
+      <div class="pastwrapper">
+        <div>
+          <a href="#" class="buenos">
+            <h3>2020</h3>
+            <p>CC Summer Festival 2020 in Buenos Aires</p>
+          </a>
+        </div>
+        <div>
+          <a href="#" class="warsaw">
+            <h3>2017</h3>
+            <p>CC Summer Festival 2017 in Warsaw</p>
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="partners-about">
+      <h2>Partner</h2>
+      <a
+        rel="noopener noreferrer"
+        target="_blank"
+        href="https://www.mozilla.org/en-US/"
+        ><img src="assets/images/mozilla.svg" alt="Mozilla"
+      /></a>
+      <a rel="noopener noreferrer" target="_blank" href="https://about.google/"
+        ><img src="assets/images/google.svg" alt="Google"
+      /></a>
+      <a rel="noopener noreferrer" target="_blank" href="https://www.naver.com/"
+        ><img src="assets/images/naver.svg" alt="Naver"
+      /></a>
+      <a
+        rel="noopener noreferrer"
+        target="_blank"
+        href="https://www.kakaocorp.com/page/"
+        ><img src="assets/images/daumkakao.svg" alt="Daumkakao"
+      /></a>
+      <a
+        rel="noopener noreferrer"
+        target="_blank"
+        href="https://www.airbnb.com/"
+        ><img src="assets/images/airbnb.svg" alt="Airbnb"
+      /></a>
+    </section>
+    <footer class="footer-about">
+      <img src="assets/images/logo.png" alt="" />
+      <div>
+        <p class="footertitle">
+          2022 Creative Commons Turkey. Some Rights Reserved
+        </p>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/dc85fe6c8c.js"
       crossorigin="anonymous"
