--- a/about.html
+++ b/about.html
@@ -31,11 +31,11 @@
         </div>
         <ul class="navlinks">
           <li><a class="about" href="about.html">About</a></li>
-          <li><a href="#">Program</a></li>
-          <li><a href="#">Join</a></li>
-          <li><a href="#">Sponsor</a></li>
-          <li><a href="#">News</a></li>
-          <li class="cc"><a href="#">CC campaing</a></li>
+          <li><a href="index.html">Program</a></li>
+          <li><a href="">Join</a></li>
+          <li><a href="">Sponsor</a></li>
+          <li><a href="">News</a></li>
+          <li class="cc"><a href="">CC campaing</a></li>
         </ul>
       </div>
     </div>
@@ -137,5 +137,6 @@
       src="https://kit.fontawesome.com/dc85fe6c8c.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/assets/js/scripts.js"></script>
   </body>
 </html>
