--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@
       src="https://kit.fontawesome.com/dc85fe6c8c.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/assets/js/scripts.js"></script>
   </body>
 </html>
