Add featured artists section with js

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
       <div class="join"><button>Join CC Global Summit 2015</button></div>
       <a href="#" class="seeprogram">SEE THE WHOLE PROGRAM</a>
     </section>
+    <section class="featured-artists">
+      <h2>Featured Artists</h2>
+      <div class="grid-container"></div>
+    </section>
     <section class="partners">
       <h2>Partner</h2>
       <a
