Add new icons for home page

--- a/index.html
+++ b/index.html
@@ -57,40 +57,35 @@
           <i class="fa-solid fa-guitar"></i>
           <p class="infoheading">Lecture</p>
           <p class="infotext">
-            Listen to the speakers from various countries about the messages of
+            Listen to the artists from various countries about the messages of
             sharing and opening.
           </p>
         </div>
         <div class="info">
-          <i class="fa-solid fa-guitar"></i>
-          <p class="infoheading">CC Exhibition</p>
+          <i class="fa-solid fa-palette"></i>
+          <p class="infoheading">Exhibition</p>
           <p class="infotext">
             Appreciate various creations applying CC license of artists,
-            organized from Art Center Nabi.
+            organized from Art Center Istanbul.
           </p>
         </div>
         <div class="info">
-          <i class="fa-solid fa-guitar"></i>
-          <p class="infoheading">Forum</p>
+          <i class="fa-solid fa-store"></i>
+          <p class="infoheading">Art Show</p>
+          <p class="infotext">Enjoy the art creations of local artists.</p>
+        </div>
+        <div class="info">
+          <i class="fa-solid fa-circle-question"></i>
+          <p class="infoheading">Q&A</p>
           <p class="infotext">
-            Listen to the speakers from various countries about the messages of
-            sharing and opening.
+            Have a chance to meet your favorite artists and ask questions.
           </p>
         </div>
         <div class="info">
-          <i class="fa-solid fa-guitar"></i>
-          <p class="infoheading">Workshop</p>
+          <i class="fa-solid fa-drum"></i>
+          <p class="infoheading">Main Event</p>
           <p class="infotext">
-            Listen to the speakers from various countries about the messages of
-            sharing and opening.
-          </p>
-        </div>
-        <div class="info">
-          <i class="fa-solid fa-guitar"></i>
-          <p class="infoheading">CC Ignite</p>
-          <p class="infotext">
-            Listen to the speakers from various countries about the messages of
-            sharing and opening.
+            Enjoy Concerts of artists from all over the world.
           </p>
         </div>
       </div>
