Fix file sources for github pages

--- a/index.html
+++ b/index.html
@@ -102,29 +102,29 @@
         rel="noopener noreferrer"
         target="_blank"
         href="https://www.mozilla.org/en-US/"
-        ><img src="assets/images/mozilla.svg" alt="Mozilla"
+        ><img src="./assets/images/mozilla.svg" alt="Mozilla"
       /></a>
       <a rel="noopener noreferrer" target="_blank" href="https://about.google/"
-        ><img src="assets/images/google.svg" alt="Google"
+        ><img src="./assets/images/google.svg" alt="Google"
       /></a>
       <a rel="noopener noreferrer" target="_blank" href="https://www.naver.com/"
-        ><img src="assets/images/naver.svg" alt="Naver"
+        ><img src="./assets/images/naver.svg" alt="Naver"
       /></a>
       <a
         rel="noopener noreferrer"
         target="_blank"
         href="https://www.kakaocorp.com/page/"
-        ><img src="assets/images/daumkakao.svg" alt="Daumkakao"
+        ><img src="./assets/images/daumkakao.svg" alt="Daumkakao"
       /></a>
       <a
         rel="noopener noreferrer"
         target="_blank"
         href="https://www.airbnb.com/"
-        ><img src="assets/images/airbnb.svg" alt="Airbnb"
+        ><img src="./assets/images/airbnb.svg" alt="Airbnb"
       /></a>
     </section>
     <footer class="footer">
-      <img src="assets/images/logo.png" alt="" />
+      <img src="./assets/images/logo.png" alt="" />
       <div>
         <p class="footertitle">
           2022 Creative Commons Turkey. Some Rights Reserved
