Fix logo src for pages deployment

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="desktopnav">
         <div class="desktoplogo">
           <a href="index.html"
-            ><img src="/assets/images/logo.png" alt="logo"
+            ><img src="./assets/images/logo.png" alt="logo"
           /></a>
         </div>
         <ul class="navlinks">
