Fix logo src for pages deployment

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <div class="desktopnav">
         <div class="desktoplogo">
           <a href="index.html"
-            ><img src="/assets/images/logo.png" alt="logo"
+            ><img src="./assets/images/logo.png" alt="logo"
           /></a>
         </div>
         <ul class="navlinks">
@@ -75,7 +75,7 @@
         Agrawal we optimized the prize-winning-loogo for this year's summit as
         following:
       </p>
-      <div><img src="/assets/images/logo.png" /></div>
+      <div><img src="./assets/images/logo.png" /></div>
     </section>
     <section class="past-summits">
       <h2>See the past CC Summer Festivals</h2>
@@ -126,7 +126,7 @@
       /></a>
     </section>
     <footer class="footer-about">
-      <img src="assets/images/logo.png" alt="" />
+      <img src="./assets/images/logo.png" alt="" />
       <div>
         <p class="footertitle">
           2022 Creative Commons Turkey. Some Rights Reserved
