fix src for github pages

--- a/about.html
+++ b/about.html
@@ -137,6 +137,6 @@
       src="https://kit.fontawesome.com/dc85fe6c8c.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/assets/js/scripts.js"></script>
+    <script src="./assets/js/scripts.js"></script>
   </body>
 </html>
